<resources>
    <string name="survey_title_for_transcript">"
        \n\t-------------------------------------------------\n
        Forschungsprojekt Voice zur Untersuchung von Assistenzsystemen im Alltag\n
        START Untersuchungstranskript erzeugt vom Assistenzsystem Temi\n
        -------------------------------------------------\n\n
    </string>
    <string name="survey_outro_for_transcript">
        \n-------------------------------------------------\n
        ENDE des Untersuchungstranskript\n
        -------------------------------------------------\n\n</string>
    <string name="app_name">TemiVoice</string>
    <string name="top_view_text">Wählen Sie einen Kontakt, den Sie anrufen möchten:</string>
    <string name="ja">Zurück zur Basisstation</string>
    <string name="vielen_dank_temi">Vielen Dank Temi</string>
    <string-array name="spinner_items">
        <item>Default</item>
    </string-array>
    <string name="text_field_cleared_msg">/////////////////// text field cleared ///////////////////////\n</string>
    <string name="greeting_welcome_door"> Herzlich Willkommen in der Musterwohnung der htw saar! Mein Name
        ist Temi. Vielen Dank für Ihre Teilnahme am Forschungsprojekt VOICE
        zur Erforschung der Nutzbarkeit und Akzeptanz von K I basierten
        Robotik-Systemen im Alltag. Ich bin Temi und freue mich schon darauf Sie kennenzulernen.
        Aber bevor wir anfangen folgen Sie mir bitte ins Wohnzimmer.</string>
    <string name="greeting_livingroom_have_a_seat">Sie können ihren Mantel oder ihre Jacke hier ablegen.
        Nehmen Sie doch bitte erst einmal Platz. Meine Kollegin wird gleich mit Ihnen noch kurz
        die Einzelheiten des heutigen Tages durchgehen, danach gehts mit einer kurzen Führung
        durch die Wohnung weiter. Ich werde erstmal hier stehen bleiben. </string>
    <string name="greeting_introduction">okay. Hallo nochmal. Mein Name ist Temi. Ich bin ein
        Assistenzroboter und wurde entwickelt, um Menschen in ihrem Alltag zu unterstützen.
        Wenn Sie mir etwas sagen möchten, sprechen Sie mich bitte mit  Hey Temi  gefolgt von ihrem
        Anliegen an. Ich werde Ihnen dann so gut antworten wie ich kann.
        Ich hoffe, es geht Ihnen gut und Sie haben gut hergefunden.
        Wir befinden uns aktuell in der Musterwohnung zum Thema alltagsunterstützende
        Assistenzsysteme der htw saar.
        Die Wohnung ist mit weiteren Sprachassistenzsystemen ausgestattet.
        Zusammen mit meinen Freunden Alexa und Vivi werde ich Ihnen heute versuchen aufzuzeigen,
        wie wir Ihnen tatkräftig zur Seite stehen können. Meine Freundin Vivi z.B. nutzt ihre
        Sturzsensoren, um immer ein Auge darauf zu haben, dass es Ihnen noch gut geht.
        Im Verlauf dieses Programmes haben wir
        einige Szenarien vorbereitet, in denen sie meine Fähigkeiten kennenlernen können.
        Damit wir uns gut verstehen, ist es wichtig, dass sie mich immer aussprechen lassen.
        In einem ersten Schritt möchte ich Ihnen eine kleine Führung durch unsere Musterwohnung geben
        und ihnen dabei einige Besonderheiten erklären. Dazu würde ich Sie zunächst einmal in
        die Küche führen. Wenn sie bereit sind, mir in die Küche zu folgen, sagen Sie einfach
        Hey Temi lass uns weitermachen.</string>
    <string name="kt_letsgo">Alles klar. Ich fahre nun in die Küche. Bitte
        folgen Sie mir.</string>
    <string name="insufficant_answer">Bitte entschuldigen Sie. Wenn Sie bereit sind, weiter
        zu machen, sagen Sie  Hey Temi lass uns weitermachen.</string>
    <string name="kt_takeDrink">Hier wären wir. Es ist wichtig viel zu trinken. Daher haben
        wir Ihnen Getränke bereitgestellt. Bitte bedienen Sie sich und nehmen Sie gerne Platz.
        Wenn sie möchten, erkläre ich Ihnen einige Besonderheiten dieser Küche.
        Wenn Sie daran Interesse haben sagen Sie Hey Temi was kannst du mir zur Küche sagen.
        Andernfalls können wir auch mit dem Programm fortfahren. Sagen Sie dazu  Hey Temi lass
        uns weitermachen.</string>
    <string name="kt_no_tour">Kein Problem. Dann machen wir weiter. </string>
    <string name="kt_tour_finished">Nehmen Sie ihr Getränk und lassen sie uns zurück ins
        Wohnzimmer zurückgehen. Wenn Sie bereit sind sagen Sie  Hey Temi lass uns weitermachen.</string>
    <string name="aq_introduction">Gerne würde ich Ihnen noch einige Fragen zu ihrem
        Unterstützungsbedarf stellen. Bei ihrer Antwort brauchen Sie mich dabei nicht extra
        mit  Hey Temi  ansprechen. Wenn ich Ihnen die Frage gestellt habe, höre ich
        automatisch zu. Wenn Sie das verstanden haben und bereit sind, sagen Sie Hey Temi ja ich bin
        bereit. Ansonsten kann ich den Frageablauf auch erneut erklären.  </string>
    <string name="aq_introduction_short">Unterstützungsbedarf Kurzfassung. Sagen Sie Temi bin bereit</string>
    <string name="aq_ans_unsufficiant">Entschuldigung das habe ich nicht korrekt verstanden.
        Ich werde das Vorgehen noch einmal erklären.</string>
    <string name="aq_ans_ready">Alles klar. Los gehts. </string>
    <string name="aq_remind_no_hey_temi">Wie gesagt, sie brauchen mich nicht mit Hey Temi anzusprechen.
        Sprechen Sie einfahc drauf los</string>
    <string name="aq_question_1">Die erste Frage lautet  Wenn
        ich in Ihrem Haushalt verfügbar wäre, worin könnte ich Sie unterstützen? Vielleicht bei Erinnerungen oder ähnlichem?</string>
    <string name="aq_question_1_anything_else">Möchten Sie noch etwas hinzufügen? </string>
    <string name="aq_question_2">Vielen Dank für ihre Antwort. Ich könnte Sie beispielsweise auch an die Medikamenteneinnahme
    erinnern, falls Sie welche einnehmen. Würde Ihnen das gefallen?       </string>
    <string name="aq_question_3">Vielen Dank. Außerdem könnte ich Sie  im Laufe eines Tages auch erinnern, genug zu trinken.
     Wäre das für sie hilfreich?  </string>
    <string name="aq_thanks">Vielen Dank. Ich habe mir ihre Antworten gemerkt. </string>
    <string name="ai_introduction">Als nächstes möchte ich Ihnen ein weiteres Sprachassistenzsystem
        namens    Alexa    vorstellen. Diese befindet sich rechts auf der Komode
        im Wohnzimmer. Bevor wir jedoch dorthin
        zurückgehen, möchte ich Ihnen die Bedienung der Alexa  noch hier erklären. Grund dafür ist,
        das Alexa anfängt zuzuhören, wenn ihr Name im Raum gesagt wird.
        Wenn wir gleich im Wohnzimmer sind, würde ich Sie bitten zu sagen   Alexa schließe
        den Rolladen. Danach können Sie Alexa auch bitten, dass Licht ein oder auszuschalten.
        Nehmen Sie doch bitte ihr Glas und sagen Sie  Hey Temi lass uns weitermachen, um ins
        Wohnzimmer zu gehen.
        </string>
    <string name="ai_introduction_short">Alexa Interaktion Einführung Kurzfassung.Sag Hey temi lass uns weitermachen.</string>
    <string name="ai_ready">Alles klar. Ich bringe sie nun zurück ins Wohnzimmer, sodass sie dort Alexa bitten können, die Rollläden
        zu öffnen oder das Licht einzuschalten.</string>
    <string name="ai_not_ready">Kein Problem. Ich erkläre Alexa erneut. </string>
    <string name="ai_ready_livingroom">Da wären wir. Die Sprachassistenz, deren Name ich jetzt nicht nennen kann, befindet sich rechts auf der Komode.
        Zu ihrer Erinnerung zeige ich ihnen die Sprachbefehle auf meinem Bildschirm an. Wenn Sie mit der Bedienung der Sprachassistenz fertig sind, oder keine Lust mehr haben, sagen Sie einfach  Hey temi lass uns weitermachen.  </string>
    <string name="ai_finished">Alles klar. Ich hoffe die Interaktion mit dem Sprachassistenzsystem hat funktioniert. </string>
    <string name="ai_not_understood">Entschuldigung das habe ich wohl nicht korrekt verstanden. Wenn Sie fertig sind mit dem Sprachassistenzsystem, sagen Sie
         Hey Temi ich bin fertig oder  Hey Temi  lass uns weitermachen. </string>
    <string name="survey_start_phrase">Hey Temi lass uns anfangen</string>
    <string name="survey_to_kitchen"> Okay! Folgen Sie mir bitte. Es ist wichtig viel zu trinken. Daher haben wir Ihnen Getränke bereitgestellt. Hier wären wir. Bitte bedienen Sie sich. Wenn ich Ihnen etwas zu den hier verbauten (Dingen) erzählen soll, sagen Sie bitte‚ Hey Temi, was kannst du mir zur Küche‘ sagen, andernfalls können wir auch mit‚Hey Temi, lass uns weitergehen‘ mit der Besichtigung fortfahren. </string>
    <string name="survey_goodbye_string">Vielen Dank für ihre Antworten. Ich habe mich gefreut, Sie kennenzulernen und ich möchte mich bei Ihne bedanken, dass Sie an unserer Studie teilgenommen haben. Vielen Dank und alles Gute. </string>
    <string name="survey_announcement">Unser Treffen neigt sich langsam dem Ende zu. Nehmen Sie doch bitte nocheinmal auf dem Sofa Platz.</string>
    <string name="survey_questions_intro">Bevor wir Schluss machen, möchte ich Sie bitten mir noch ein paar Fragen zu beantworten. Bitte beantworten Sie die Fragen auf einer Skala von 1 bis 5, 1 entspricht dabei trifft gar nicht zu, 5 entspricht trifft voll zu. Sie können auch keine Angabe sagen. Sagen Sie auch Punkte dazu.
         Bei ihren Antworten brauchen sie nicht extra Hey Temi sagen, ich höre automatisch zu, sobald ich die Frage gestellt habe.
        </string>
    <string name="survey_letsgo">Fangen wir an.</string>
    <string name="survey_question_1">Meine Sprache war einfach und verständlich.</string>
    <string name="survey_question_2">Meine Sprechgeschwindigkeit war angemessen.</string>
    <string name="survey_question_3">Sie konnten mir sagen, was ich machen soll.</string>
    <string name="survey_question_4">Die Sprache des Sprachassistenten Alexa war einfach und verständlich.</string>
    <string name="survey_question_5">Die Sprechgeschwindigkeit des Sprachassistenten Alexa war angemessen.</string>
    <string name="survey_question_6">Sie konnten dem Sprachassistenten Alexa sagen, was er machen soll.</string>
    <string name="survey_question_7">Die Sprache des Sprachassistenten Vivi war einfach und verständlich.</string>
    <string name="survey_question_8">Die Sprechgeschwindigkeit des Sprachassistenten Vivi war angemessen.</string>
    <string name="survey_question_9">Sie konnten dem Sprachassistenten Vivi sagen, was er machen soll.</string>
    <string name="survey_question_10">Einen Sprachassistenten in Ihrem Alltag zu nutzen können Sie sich gut vorstellen.</string>
    <string name="survey_question_11">Sie glauben, dass ein Sprachassistent Ihr Leben erleichtern könnte.</string>
    <string name="survey_question_12">Statt einen Sprachassistenten zu nutzen, würden Sie den zwischenmenschlichen Austausch vorziehen.</string>
    <string name="survey_question_13">Die Nutzung eines Sprachassistenten würde Ihnen Angst machen.</string>
    <string name="survey_question_14">Um einen Sprachassistenten überhaupt nutzen zu können, bräuchten Sie eine Schulung.</string>
    <string name="survey_question_15">Um einen Sprachassistenten überhaupt nutzen zu können, bräuchten Sie finanzielle Unterstützung.</string>
    <string name="i_want_to_scan_a_qr_code">I want to scan a QR Code</string>
    <string name="quit">Beenden</string>
    <string name="listen">Hören</string>
    <string name="sequence1">Begrüßungssequenz</string>
    <string name="sequence2">Rezept</string>
    <string name="sequence3">AAL-Sequenz</string>
    <string name="sequence4">Gedächtnisspiel</string>
    <string name="back">Zurück</string>
    <string name="speed">Sprachgeschwindigkeit</string>
    <string name="pitch">Stimmhöhe</string>
    <string name="save">Speichern</string>
    <string name="voice_settings">Spracheinstellungen</string>
    <string name="female">Weiblich</string>
    <string name="male">Männlich</string>
    <string name="unknown">Unbekannt</string>
    <string name="_0">0</string>
    <string name="_1_0">1.0</string>
    <string name="gender">Geschlecht</string>
</resources>