<!-- sequence_window.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">


    <TextView
        android:id="@+id/textView"
        android:layout_width="280dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/voice_settings"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/gender"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/neutralRadioButton"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:text="@string/unknown" />
    </RadioGroup>

    <TextView
        android:id="@+id/pitchValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="8dp"
        android:text="@string/_0"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pitchSeekBar" />

    <TextView
        android:id="@+id/speedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="8dp"
        android:text="@string/_1_0"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speedSeekBar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pitch"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/genderRadioGroup"
        app:layout_constraintStart_toStartOf="@+id/genderRadioGroup"
        app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup" />

    <SeekBar
        android:id="@+id/pitchSeekBar"
        android:layout_width="957dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:max="20"
        android:progress="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <SeekBar
        android:id="@+id/speedSeekBar"
        android:layout_width="957dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:max="15"
        android:progress="5"
        app:layout_constraintEnd_toEndOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="@+id/saveButton"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/speed"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/pitchSeekBar"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/pitchSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/pitchSeekBar" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="1213dp"
        android:layout_height="57dp"
        android:layout_marginTop="72dp"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="@+id/backButton"
        app:layout_constraintTop_toBottomOf="@+id/speedSeekBar" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="1213dp"
        android:layout_height="57dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton"
        app:layout_constraintVertical_bias="0.035" />

</androidx.constraintlayout.widget.ConstraintLayout>
