<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/topTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/top_view_text"
        android:textColor="#000000"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topTextView">

        <Spinner
            android:id="@+id/dropdownMenu"
            android:layout_width="1100dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#FFFFFF"
            android:entries="@array/spinner_items"
            android:scrollbarSize="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="VisualLintBounds" />

        <Button
            android:id="@+id/confirmLocationButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:elegantTextHeight="true"
            android:text="@string/confirm"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dropdownMenu"
            app:layout_constraintTop_toTopOf="@+id/dropdownMenu"
            tools:ignore="VisualLintButtonSize" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dropdownMenu"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/elevatorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="60sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/confirmTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="60sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/elevatorTextView" />

            <Button
                android:id="@+id/confirmArrivedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="false"
                android:text="@string/ja"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/confirmTextView"
                app:layout_constraintStart_toStartOf="@+id/confirmTextView"
                app:layout_constraintTop_toBottomOf="@+id/confirmTextView" />

            <Button
                android:id="@+id/confirmFinishButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/vielen_dank_temi"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/elevatorTextView" />

            <Button
                android:id="@+id/QRCodeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_want_to_scan_a_qr_code"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmArrivedButton" />

            <Button
                android:id="@+id/MenuButton"
                android:text="@string/quit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="398dp"
                app:layout_constraintBottom_toBottomOf="@+id/QRCodeButton" />

            <Button
                android:id="@+id/Listen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/MenuButton"
                app:layout_constraintHorizontal_bias="0.511"
                app:layout_constraintStart_toEndOf="@+id/QRCodeButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.916" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>